# SpectralDev

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  raw_sine_values.txt  real_voice.txt  resynthesized_values.txt  resynthesized_voice.txt
.cache/clangd/index/: SpectralConcepts.h.34977FBEF33ED8E9.idx  SpectralDomainSpec.h.069B4E992A4A7FDB.idx  main.cpp.7C2067F46A2F5A6B.idx
.helix/: languages.toml
Visualizations/: check_outputs.py  create_sample.py
architecture/: .$spectral-madness-arch.drawio.bkp  spectral-madness-arch.drawio
inc/: BufferSizeManager.h  SpctBufferManager.h  SpctCalculationEngine.h  SpctCircularBuffer.h  SpctDomainSpecific.h  SpctExponentLUT.h  SpctFxParameters.h  SpctInstanceController.h  SpctOscillator.h  SpctOscillatorStack.h  SpctOscillators.h  SpctProcessingFunctions.h  SpctResyncOscsillators.h  SpctSampleArrayView.h  SpctTriggerManager.h  SpctWavetables.h  SpectralDomainSpec.h
notes/: logicflow.md
src/: SpctInstanceController.cpp
test/: SpctArraySliceTest.h  SpctBufferManagerTest.h  SpctDomainSpecificTest.h  SpctOscillatorTest.h  SpctPowTwoTest.h  SpctRealVoiceTest.h  SpctWTTest.h  VoiceSampleArray.h
tools/: build-n-run.sh
